--- a/front-end/index.html
+++ b/front-end/index.html
@@ -14,19 +14,17 @@
 
 
 <body>
-  <nav class="white" role="navigation">
+  <nav class="white z-depth-0" role="navigation">
     <div class="row">
       <div class="col m4 l4 s12 ">
         <ul id="" class="right hide-on-med-and-down nav-ul">
-          <li class="active"><a href="#">Home</a></li>
+          <li class=""><a href="#">Home</a></li>
           <li><a href="#">Categories</a></li>
         </ul>
       </div>
       <div class="col m4 l4 s12">
         <a id="logo-container" class="brand-logo center" href="index.php">ECOMMERCE</a>
-
       </div>
-
       <div class="col m4 l4 s12">
         <ul class="left hide-on-med-and-down nav-ul">
           <li><a href="#">Contact</a></li>
@@ -35,7 +33,7 @@
         </ul>
       </div>
 
-
+      <!-- MOBILE MENU -->
       <ul id="nav-mobile" class="sidenav">
         <li><a href="#">Navbar Link</a></li>
       </ul>
@@ -43,23 +41,31 @@
     </div>
   </nav>
 
-  <div id="index-banner" class="parallax-container">
-    <div class="section no-pad-bot">
-      <div class="container">
-        <br><br>
-        <h1 class="header center teal-text text-lighten-2">Parallax Template</h1>
-        <div class="row center">
-          <h5 class="header col s12 light">A modern responsive front-end framework based on Material Design</h5>
+
+  <!-- SLIDER -->
+  <div class="slider-container">
+    <div class="row">
+      <div class="col m8 l8 s12">
+        <div class="carousel carousel-slider">
+          <a class="carousel-item" href="#one!"><img src="background1.jpg"></a>
+          <a class="carousel-item" href="#two!"><img src="background2.jpg"></a>
+          <a class="carousel-item" href="#three!"><img src="background3.jpg"></a>
+          <a class="carousel-item" href="#four!"><img src="background1.jpg"></a>
+          <a class="carousel-item" href="#five!"><img src="background2.jpg"></a>
         </div>
-        <div class="row center">
-          <a href="http://materializecss.com/getting-started.html" id="download-button"
-            class="btn-large waves-effect waves-light teal lighten-1">Get Started</a>
+      </div>
+      <div class="col m4 l4 s12">
+        <div class="text-translate">
+          <div>
+            <h1 class="slider-title">Women's Collection 2020</h1>
+          </div>
+          <div class="slider-button">
+            <a class="waves-effect waves-light btn-large  btn-flat">Shop Now!</a>
+          </div>
         </div>
-        <br><br>
 
       </div>
     </div>
-    <div class="parallax"><img src="background1.jpg" alt="Unsplashed background img 1"></div>
   </div>
 
 
