Update Front end; Slider Updates

--- a/front-end/index.html
+++ b/front-end/index.html
@@ -4,7 +4,7 @@
 <head>
   <meta http-equiv="Content-Type" content="text/html; charset=UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1" />
-  <title>Parallax Template - Materialize</title>
+  <title>OBB - ECOM</title>
 
   <!-- CSS  -->
   <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
@@ -47,17 +47,16 @@
     <div class="row">
       <div class="col m8 l8 s12">
         <div class="carousel carousel-slider">
-          <a class="carousel-item" href="#one!"><img src="background1.jpg"></a>
-          <a class="carousel-item" href="#two!"><img src="background2.jpg"></a>
-          <a class="carousel-item" href="#three!"><img src="background3.jpg"></a>
-          <a class="carousel-item" href="#four!"><img src="background1.jpg"></a>
-          <a class="carousel-item" href="#five!"><img src="background2.jpg"></a>
+          <a class="carousel-item" href="#one!"><img src="media/slider/1.jpg"></a>
+          <a class="carousel-item" href="#two!"><img src="media/slider/2.jpg"></a>
+          <a class="carousel-item" href="#three!"><img src="media/slider/3.jpg"></a>
+          <a class="carousel-item" href="#four!"><img src="media/slider/4.jpg"></a>
         </div>
       </div>
       <div class="col m4 l4 s12">
         <div class="text-translate">
           <div>
-            <h1 class="slider-title">Women's Collection 2020</h1>
+            <h1 class="slider-title">Summer Collection 2020</h1>
           </div>
           <div class="slider-button">
             <a class="waves-effect waves-light btn-large  btn-flat">Shop Now!</a>
