--- a/front-end/index.html
+++ b/front-end/index.html
@@ -58,61 +58,165 @@
           <div>
             <h1 class="slider-title">Summer Collection 2020</h1>
           </div>
-          <div class="slider-button">
-            <a class="waves-effect waves-light btn-large  btn-flat">Shop Now!</a>
-          </div>
+          <a id="banner_button" class="waves-effect waves-light btn-large  btn-flat">Shop Now!</a>
         </div>
 
       </div>
     </div>
   </div>
 
+  <!-- NEW ARRIVALS -->
+  <div id="new_arrivals">
+    <div class="title center">
+      <h1>New Arrivals</h1>
+      <p>Some of the latest trends in town</p>
+    </div>
 
-  <div class="container">
-    <div class="section">
 
-      <!--   Icon Section   -->
-      <div class="row">
-        <div class="col s12 m4">
-          <div class="icon-block">
-            <h2 class="center brown-text"><i class="material-icons">flash_on</i></h2>
-            <h5 class="center">Speeds up development</h5>
+    <div class="">
+      <div class="row center">
+        <div class="col m4 l3 s6">
+          <div class="dress-card">
+            <div class="dress-card-head">
+              <img class="dress-card-img-top"
+                src="https://assets.myntassets.com/h_1440,q_100,w_1080/v1/assets/images/7578935/2018/10/23/d7b740bc-e00e-4bec-97aa-65016f8ff2e71540289479612-Harpa-Women-Dresses-2331540289479465-1.jpg"
+                alt="">
 
-            <p class="light">We did most of the heavy lifting for you to provide a default stylings that incorporate
-              our
-              custom components. Additionally, we refined animations and transitions to provide a smoother experience
-              for developers.</p>
+            </div>
+            <div class="dress-card-body">
+              <h4 class="dress-card-title">Harpa</h4>
+              <p class="dress-card-para"><span class="dress-card-price">Rs.839 &ensp;</span><span
+                  class="dress-card-crossed">Rs.2099</span><span class="dress-card-off">&ensp;(60% OFF)</span></p>
+              <a id="product_button" class="waves-effect waves-light btn-small  btn-flat">Add To Cart</a>
+
+            </div>
+
           </div>
         </div>
+        <div class="col m4 l3 s6">
+          <div class="dress-card">
+            <div class="dress-card-head">
+              <img class="dress-card-img-top"
+                src="https://assets.myntassets.com/h_1440,q_100,w_1080/v1/assets/images/6625378/2018/6/5/fcec8d8e-4253-4fa4-ae6e-c6805b3b8fd31528183265021-na-2331528183264786-1.jpg"
+                alt="">
+            </div>
+            <div class="dress-card-body">
+              <h4 class="dress-card-title">Harpa</h4>
+              <p class="dress-card-para"><span class="dress-card-price">Rs.839 &ensp;</span><span
+                  class="dress-card-crossed">Rs.2099</span><span class="dress-card-off">&ensp;(60% OFF)</span></p>
+              <a id="product_button" class="waves-effect waves-light btn-small  btn-flat">Add To Cart</a>
 
-        <div class="col s12 m4">
-          <div class="icon-block">
-            <h2 class="center brown-text"><i class="material-icons">group</i></h2>
-            <h5 class="center">User Experience Focused</h5>
+            </div>
 
-            <p class="light">By utilizing elements and principles of Material Design, we were able to create a
-              framework
-              that incorporates components and animations that provide more feedback to users. Additionally, a single
-              underlying responsive system across all platforms allow for a more unified user experience.</p>
           </div>
         </div>
+        <div class="col m4 l3 s6">
+          <div class="dress-card">
+            <div class="dress-card-head">
+              <img class="dress-card-img-top"
+                src="https://assets.myntassets.com/h_1440,q_100,w_1080/v1/assets/images/7578929/2018/10/23/86988cdc-cbe3-4b13-93f9-b37ad571b4761540274855321-Harpa-Women-Dresses-9171540274855158-1.jpg"
+                alt="">
+            </div>
+            <div class="dress-card-body">
+              <h4 class="dress-card-title">Harpa</h4>
+              <p class="dress-card-para"><span class="dress-card-price">Rs.839 &ensp;</span><span
+                  class="dress-card-crossed">Rs.2099</span><span class="dress-card-off">&ensp;(60% OFF)</span></p>
+              <a id="product_button" class="waves-effect waves-light btn-small  btn-flat">Add To Cart</a>
 
-        <div class="col s12 m4">
-          <div class="icon-block">
-            <h2 class="center brown-text"><i class="material-icons">settings</i></h2>
-            <h5 class="center">Easy to work with</h5>
+            </div>
 
-            <p class="light">We have provided detailed documentation as well as specific code examples to help new
-              users
-              get started. We are also always open to feedback and can answer any questions a user may have about
-              Materialize.</p>
+          </div>
+        </div>
+        <div class="col m4 l3 s6">
+          <div class="dress-card">
+            <div class="dress-card-head">
+              <img class="dress-card-img-top"
+                src="https://assets.myntassets.com/h_1440,q_100,w_1080/v1/assets/images/7578940/2018/10/23/fe701151-69e6-4e20-9e2a-ace63081a8e11540282217137-Harpa-Women-Dresses-191540282216937-5.jpg"
+                alt="">
+            </div>
+            <div class="dress-card-body">
+              <h4 class="dress-card-title">Harpa</h4>
+              <p class="dress-card-para"><span class="dress-card-price">Rs.839 &ensp;</span><span
+                  class="dress-card-crossed">Rs.2099</span><span class="dress-card-off">&ensp;(60% OFF)</span></p>
+              <a id="product_button" class="waves-effect waves-light btn-small  btn-flat">Add To Cart</a>
+
+            </div>
+
+          </div>
+        </div>
+        <div class="col m4 l3 s6">
+          <div class="dress-card">
+            <div class="dress-card-head">
+              <img class="dress-card-img-top"
+                src="https://assets.myntassets.com/h_1440,q_100,w_1080/v1/assets/images/7578929/2018/10/23/86988cdc-cbe3-4b13-93f9-b37ad571b4761540274855321-Harpa-Women-Dresses-9171540274855158-1.jpg"
+                alt="">
+            </div>
+            <div class="dress-card-body">
+              <h4 class="dress-card-title">Harpa</h4>
+              <p class="dress-card-para"><span class="dress-card-price">Rs.839 &ensp;</span><span
+                  class="dress-card-crossed">Rs.2099</span><span class="dress-card-off">&ensp;(60% OFF)</span></p>
+              <a id="product_button" class="waves-effect waves-light btn-small  btn-flat">Add To Cart</a>
+
+            </div>
+
+          </div>
+        </div>
+        <div class="col m4 l3 s6">
+          <div class="dress-card">
+            <div class="dress-card-head">
+              <img class="dress-card-img-top"
+                src="https://assets.myntassets.com/h_1440,q_100,w_1080/v1/assets/images/7578940/2018/10/23/fe701151-69e6-4e20-9e2a-ace63081a8e11540282217137-Harpa-Women-Dresses-191540282216937-5.jpg"
+                alt="">
+            </div>
+            <div class="dress-card-body">
+              <h4 class="dress-card-title">Harpa</h4>
+              <p class="dress-card-para"><span class="dress-card-price">Rs.839 &ensp;</span><span
+                  class="dress-card-crossed">Rs.2099</span><span class="dress-card-off">&ensp;(60% OFF)</span></p>
+              <a id="product_button" class="waves-effect waves-light btn-small  btn-flat">Add To Cart</a>
+
+            </div>
+
+          </div>
+        </div>
+        <div class="col m4 l3 s6">
+          <div class="dress-card">
+            <div class="dress-card-head">
+              <img class="dress-card-img-top"
+                src="https://assets.myntassets.com/h_1440,q_100,w_1080/v1/assets/images/7578935/2018/10/23/d7b740bc-e00e-4bec-97aa-65016f8ff2e71540289479612-Harpa-Women-Dresses-2331540289479465-1.jpg"
+                alt="">
+
+            </div>
+            <div class="dress-card-body">
+              <h4 class="dress-card-title">Harpa</h4>
+              <p class="dress-card-para"><span class="dress-card-price">Rs.839 &ensp;</span><span
+                  class="dress-card-crossed">Rs.2099</span><span class="dress-card-off">&ensp;(60% OFF)</span></p>
+              <a id="product_button" class="waves-effect waves-light btn-small  btn-flat">Add To Cart</a>
+
+            </div>
+
+          </div>
+        </div>
+        <div class="col m4 l3 s6">
+          <div class="dress-card">
+            <div class="dress-card-head">
+              <img class="dress-card-img-top"
+                src="https://assets.myntassets.com/h_1440,q_100,w_1080/v1/assets/images/6625378/2018/6/5/fcec8d8e-4253-4fa4-ae6e-c6805b3b8fd31528183265021-na-2331528183264786-1.jpg"
+                alt="">
+            </div>
+            <div class="dress-card-body">
+              <h4 class="dress-card-title">Harpa</h4>
+              <p class="dress-card-para"><span class="dress-card-price">Rs.839 &ensp;</span><span
+                  class="dress-card-crossed">Rs.2099</span><span class="dress-card-off">&ensp;(60% OFF)</span></p>
+              <a id="product_button" class="waves-effect waves-light btn-small  btn-flat">Add To Cart</a>
+
+            </div>
+
           </div>
         </div>
       </div>
 
     </div>
   </div>
-
 
   <div class="parallax-container valign-wrapper">
     <div class="section no-pad-bot">
