Update Front end; Added AllProducts

--- a/front-end/index.html
+++ b/front-end/index.html
@@ -217,17 +217,179 @@
 
     </div>
   </div>
+  <!-- NEW ARRIVALS - END -->
 
+  <!-- PARALLAX -->
   <div class="parallax-container valign-wrapper">
     <div class="section no-pad-bot">
       <div class="container">
         <div class="row center">
-          <h5 class="header col s12 light">A modern responsive front-end framework based on Material Design</h5>
+          <h5 class="header col s12 white black-text">Some of the latest trends in town
+          </h5>
         </div>
       </div>
     </div>
-    <div class="parallax"><img src="background2.jpg" alt="Unsplashed background img 2"></div>
+    <div class="parallax"><img src="media/parallax/1.jpg" alt="Unsplashed background img 2"></div>
   </div>
+  <!-- PARALLAX - END -->
+
+  <!-- ALL PRODUCTS -->
+  <div id="new_arrivals">
+    <div class="title center">
+      <h1>All Products</h1>
+      <p>Some of the latest trends in town</p>
+    </div>
+
+
+    <div class="row center">
+      <div class="col m4 l3 s6">
+        <div class="dress-card">
+          <div class="dress-card-head">
+            <img class="dress-card-img-top"
+              src="https://assets.myntassets.com/h_1440,q_100,w_1080/v1/assets/images/7578935/2018/10/23/d7b740bc-e00e-4bec-97aa-65016f8ff2e71540289479612-Harpa-Women-Dresses-2331540289479465-1.jpg"
+              alt="">
+
+          </div>
+          <div class="dress-card-body">
+            <h4 class="dress-card-title">Harpa</h4>
+            <p class="dress-card-para"><span class="dress-card-price">Rs.839 &ensp;</span><span
+                class="dress-card-crossed">Rs.2099</span><span class="dress-card-off">&ensp;(60% OFF)</span></p>
+            <a id="product_button" class="waves-effect waves-light btn-small  btn-flat">Add To Cart</a>
+
+          </div>
+
+        </div>
+      </div>
+      <div class="col m4 l3 s6">
+        <div class="dress-card">
+          <div class="dress-card-head">
+            <img class="dress-card-img-top"
+              src="https://assets.myntassets.com/h_1440,q_100,w_1080/v1/assets/images/6625378/2018/6/5/fcec8d8e-4253-4fa4-ae6e-c6805b3b8fd31528183265021-na-2331528183264786-1.jpg"
+              alt="">
+          </div>
+          <div class="dress-card-body">
+            <h4 class="dress-card-title">Harpa</h4>
+            <p class="dress-card-para"><span class="dress-card-price">Rs.839 &ensp;</span><span
+                class="dress-card-crossed">Rs.2099</span><span class="dress-card-off">&ensp;(60% OFF)</span></p>
+            <a id="product_button" class="waves-effect waves-light btn-small  btn-flat">Add To Cart</a>
+
+          </div>
+
+        </div>
+      </div>
+      <div class="col m4 l3 s6">
+        <div class="dress-card">
+          <div class="dress-card-head">
+            <img class="dress-card-img-top"
+              src="https://assets.myntassets.com/h_1440,q_100,w_1080/v1/assets/images/7578929/2018/10/23/86988cdc-cbe3-4b13-93f9-b37ad571b4761540274855321-Harpa-Women-Dresses-9171540274855158-1.jpg"
+              alt="">
+          </div>
+          <div class="dress-card-body">
+            <h4 class="dress-card-title">Harpa</h4>
+            <p class="dress-card-para"><span class="dress-card-price">Rs.839 &ensp;</span><span
+                class="dress-card-crossed">Rs.2099</span><span class="dress-card-off">&ensp;(60% OFF)</span></p>
+            <a id="product_button" class="waves-effect waves-light btn-small  btn-flat">Add To Cart</a>
+
+          </div>
+
+        </div>
+      </div>
+      <div class="col m4 l3 s6">
+        <div class="dress-card">
+          <div class="dress-card-head">
+            <img class="dress-card-img-top"
+              src="https://assets.myntassets.com/h_1440,q_100,w_1080/v1/assets/images/7578940/2018/10/23/fe701151-69e6-4e20-9e2a-ace63081a8e11540282217137-Harpa-Women-Dresses-191540282216937-5.jpg"
+              alt="">
+          </div>
+          <div class="dress-card-body">
+            <h4 class="dress-card-title">Harpa</h4>
+            <p class="dress-card-para"><span class="dress-card-price">Rs.839 &ensp;</span><span
+                class="dress-card-crossed">Rs.2099</span><span class="dress-card-off">&ensp;(60% OFF)</span></p>
+            <a id="product_button" class="waves-effect waves-light btn-small  btn-flat">Add To Cart</a>
+
+          </div>
+
+        </div>
+      </div>
+      <div class="col m4 l3 s6">
+        <div class="dress-card">
+          <div class="dress-card-head">
+            <img class="dress-card-img-top"
+              src="https://assets.myntassets.com/h_1440,q_100,w_1080/v1/assets/images/7578929/2018/10/23/86988cdc-cbe3-4b13-93f9-b37ad571b4761540274855321-Harpa-Women-Dresses-9171540274855158-1.jpg"
+              alt="">
+          </div>
+          <div class="dress-card-body">
+            <h4 class="dress-card-title">Harpa</h4>
+            <p class="dress-card-para"><span class="dress-card-price">Rs.839 &ensp;</span><span
+                class="dress-card-crossed">Rs.2099</span><span class="dress-card-off">&ensp;(60% OFF)</span></p>
+            <a id="product_button" class="waves-effect waves-light btn-small  btn-flat">Add To Cart</a>
+
+          </div>
+
+        </div>
+      </div>
+      <div class="col m4 l3 s6">
+        <div class="dress-card">
+          <div class="dress-card-head">
+            <img class="dress-card-img-top"
+              src="https://assets.myntassets.com/h_1440,q_100,w_1080/v1/assets/images/7578940/2018/10/23/fe701151-69e6-4e20-9e2a-ace63081a8e11540282217137-Harpa-Women-Dresses-191540282216937-5.jpg"
+              alt="">
+          </div>
+          <div class="dress-card-body">
+            <h4 class="dress-card-title">Harpa</h4>
+            <p class="dress-card-para"><span class="dress-card-price">Rs.839 &ensp;</span><span
+                class="dress-card-crossed">Rs.2099</span><span class="dress-card-off">&ensp;(60% OFF)</span></p>
+            <a id="product_button" class="waves-effect waves-light btn-small  btn-flat">Add To Cart</a>
+
+          </div>
+
+        </div>
+      </div>
+      <div class="col m4 l3 s6">
+        <div class="dress-card">
+          <div class="dress-card-head">
+            <img class="dress-card-img-top"
+              src="https://assets.myntassets.com/h_1440,q_100,w_1080/v1/assets/images/7578935/2018/10/23/d7b740bc-e00e-4bec-97aa-65016f8ff2e71540289479612-Harpa-Women-Dresses-2331540289479465-1.jpg"
+              alt="">
+
+          </div>
+          <div class="dress-card-body">
+            <h4 class="dress-card-title">Harpa</h4>
+            <p class="dress-card-para"><span class="dress-card-price">Rs.839 &ensp;</span><span
+                class="dress-card-crossed">Rs.2099</span><span class="dress-card-off">&ensp;(60% OFF)</span></p>
+            <a id="product_button" class="waves-effect waves-light btn-small  btn-flat">Add To Cart</a>
+
+          </div>
+
+        </div>
+      </div>
+      <div class="col m4 l3 s6">
+        <div class="dress-card">
+          <div class="dress-card-head">
+            <img class="dress-card-img-top"
+              src="https://assets.myntassets.com/h_1440,q_100,w_1080/v1/assets/images/6625378/2018/6/5/fcec8d8e-4253-4fa4-ae6e-c6805b3b8fd31528183265021-na-2331528183264786-1.jpg"
+              alt="">
+          </div>
+          <div class="dress-card-body">
+            <h4 class="dress-card-title">Harpa</h4>
+            <p class="dress-card-para"><span class="dress-card-price">Rs.839 &ensp;</span><span
+                class="dress-card-crossed">Rs.2099</span><span class="dress-card-off">&ensp;(60% OFF)</span></p>
+            <a id="product_button" class="waves-effect waves-light btn-small  btn-flat">Add To Cart</a>
+
+          </div>
+
+        </div>
+      </div>
+
+
+      <a id="all_product_button" class="waves-effect waves-light btn-large  btn-flat center">Load More...</a>
+
+    </div>
+
+  </div>
+  <!-- ALL PRODUCTS - END -->
+
+
 
   <div class="container">
     <div class="section">
@@ -259,7 +421,7 @@
         </div>
       </div>
     </div>
-    <div class="parallax"><img src="background3.jpg" alt="Unsplashed background img 3"></div>
+    <div class="parallax"><img src="media/parallax/1.jpg" alt="Unsplashed background img 3"></div>
   </div>
 
   <footer class="page-footer teal">
