Update Front end; Index.html done

--- a/front-end/index.html
+++ b/front-end/index.html
@@ -14,12 +14,20 @@
 
 
 <body>
+
   <nav class="white z-depth-0" role="navigation">
     <div class="row">
       <div class="col m4 l4 s12 ">
-        <ul id="" class="right hide-on-med-and-down nav-ul">
-          <li class=""><a href="#">Home</a></li>
-          <li><a href="#">Categories</a></li>
+        <ul class="right hide-on-med-and-down nav-ul">
+          <li><a href="#">Home</a></li>
+          <li id="dropdown"><a href="#">Categories &#9662;</a>
+            <ul class="dropdown">
+              <li><a href="#">Kids &#9656;</a></li>
+              <li><a href="#">Women's &#9656;</a></li>
+              <li><a href="#">Men's &#9656;</a></li>
+            </ul>
+          </li>
+
         </ul>
       </div>
       <div class="col m4 l4 s12">
@@ -35,7 +43,23 @@
 
       <!-- MOBILE MENU -->
       <ul id="nav-mobile" class="sidenav">
-        <li><a href="#">Navbar Link</a></li>
+        <li><a href="#">Home</a></li>
+        <li>
+          <div class="divider"></div>
+        </li>
+        <li><a class="subheader">Categories</a></li>
+        <ul>
+          <li><a href="#">Kids</a></li>
+          <li><a href="#">Women's</a></li>
+          <li><a href="#">Men's</a></li>
+        </ul>
+        </li>
+        <li>
+          <div class="divider"></div>
+        </li>
+        <li><a href="#">Contact</a></li>
+        <li><a href="#">Cart</a></li>
+        <li><a href="#">Login</a></li>
       </ul>
       <a href="#" data-target="nav-mobile" class="sidenav-trigger"><i class="material-icons">menu</i></a>
     </div>
@@ -229,7 +253,7 @@
         </div>
       </div>
     </div>
-    <div class="parallax"><img src="media/parallax/1.jpg" alt="Unsplashed background img 2"></div>
+    <div class="parallax"><img src="media/parallax/2.jpg" alt="Unsplashed background img 2"></div>
   </div>
   <!-- PARALLAX - END -->
 
@@ -417,18 +441,18 @@
     <div class="section no-pad-bot">
       <div class="container">
         <div class="row center">
-          <h5 class="header col s12 light">A modern responsive front-end framework based on Material Design</h5>
+          <h5 class="header col s12 light">Some of the latest trends in town</h5>
         </div>
       </div>
     </div>
     <div class="parallax"><img src="media/parallax/1.jpg" alt="Unsplashed background img 3"></div>
   </div>
 
-  <footer class="page-footer teal">
+  <footer class="page-footer">
     <div class="container">
       <div class="row">
         <div class="col l6 s12">
-          <h5 class="white-text">Company Bio</h5>
+          <h5>ECOMMERCE</h5>
           <p class="grey-text text-lighten-4">We are a team of college students working on this project like it's our
             full time job. Any amount would help support and continue development on this project and is greatly
             appreciated.</p>
@@ -436,28 +460,22 @@
 
         </div>
         <div class="col l3 s12">
-          <h5 class="white-text">Settings</h5>
-          <ul>
-            <li><a class="white-text" href="#!">Link 1</a></li>
-            <li><a class="white-text" href="#!">Link 2</a></li>
-            <li><a class="white-text" href="#!">Link 3</a></li>
-            <li><a class="white-text" href="#!">Link 4</a></li>
-          </ul>
+
         </div>
         <div class="col l3 s12">
-          <h5 class="white-text">Connect</h5>
-          <ul>
-            <li><a class="white-text" href="#!">Link 1</a></li>
-            <li><a class="white-text" href="#!">Link 2</a></li>
-            <li><a class="white-text" href="#!">Link 3</a></li>
-            <li><a class="white-text" href="#!">Link 4</a></li>
+          <h5 class="white-text">Quick Links</h5>
+          <ul class="quick-links">
+            <li><a class="white-text" href="#!">HOME</a></li>
+            <li><a class="white-text" href="#!">CATEGORIES</a></li>
+            <li><a class="white-text" href="#!">CONTACT</a></li>
+            <li><a class="white-text" href="#!">LOGIN</a></li>
           </ul>
         </div>
       </div>
     </div>
     <div class="footer-copyright">
       <div class="container">
-        Made by <a class="brown-text text-lighten-3" href="http://materializecss.com">Materialize</a>
+        Made by <a class="brown-text text-lighten-3" href="https://onebigbit.com/">One Big Bit</a>
       </div>
     </div>
   </footer>
