Login Page BreadCrumb Added

--- a/front-end/login.html
+++ b/front-end/login.html
@@ -15,7 +15,7 @@
 
 <body>
 
-    <div class="navbar-fixed">
+    <div class="">
         <nav class="white z-depth-0" role="navigation">
             <div class="row">
                 <div class="col m4 l4 s12 ">
@@ -73,66 +73,87 @@
             <div class="section no-pad-bot">
                 <div class="container">
                     <div class="row center">
-                        <h5 class="header col s12 white black-text">Login/Register
+                        <h5 class="header col s12">
+                            <div class="breadcrumb_wrapper">
+                                <a href="index.html" class="breadcrumb">HOME</a>
+                                <a href="login.html" class="breadcrumb">User Login</a>
+                            </div>
                         </h5>
                     </div>
                 </div>
             </div>
             <div class="parallax"><img src="media/parallax/2.jpg" alt="Unsplashed background img 2"></div>
         </div>
-        <div class="row container center">
-            <form class="col m6 l6 s12 ">
-                <h2>Login</h2>
-                <div class="row">
-                    <div class="input-field col s12">
-                        <input id="login-email" type="email" class="validate">
-                        <label for="email">Email</label>
-                    </div>
-                </div>
-                <div class="row">
-                    <div class="input-field col s12">
-                        <input id="login-password" type="password" class="validate">
-                        <label for="password">Password</label>
-                    </div>
-                </div>
-                <a id="all_product_button" class="waves-effect waves-light btn-large  btn-flat center">Login</a>
 
-            </form>
-
-
-            <form class="col m6 l6 s12 ">
-                <h2>Register</h2>
-
-                <div class="row">
-                    <div class="input-field col s12">
-                        <input id="name" type="text" class="validate">
-                        <label for="name">Name</label>
-                    </div>
+        <!-- TABS -->
+        <div class="login_wrapper">
+            <div class="row">
+                <div class="col s12 m6 push-m3">
+                    <ul class="tabs">
+                        <li class="tab col s6"><a class="active" href="#tab1">Login</a></li>
+                        <li class="tab col s6"><a href="#tab2">Register</a></li>
+                    </ul>
                 </div>
 
-                <div class="row">
-                    <div class="input-field col s12">
-                        <input id="email" type="email" class="validate">
-                        <label for="email">Email</label>
-                        <span class="helper-text" data-error="Incorrect Email ID" data-success="right"></span>
-                    </div>
-                </div>
-                <div class="row">
-                    <div class="input-field col s12">
-                        <input id="mobile" type="number" class="validate">
-                        <label for="mobile">Mobile No.</label>
-                    </div>
-                </div>
-                <div class="row">
-                    <div class="input-field col s12">
-                        <input id="password" type="password" class="validate">
-                        <label for="password">Password</label>
-                    </div>
-                </div>
-                <a id="all_product_button" class="waves-effect waves-light btn-large  btn-flat center">Sign Up</a>
+            </div>
 
-            </form>
+            <div class="row">
+                <!-- LOGIN FORM -->
+                <form class="col s10 push-s1 m6 push-m3" id="tab1">
+                    <!-- <h2>Login</h2> -->
+                    <div class="row">
+                        <div class="input-field col s12">
+                            <input id="login-email" type="email" class="validate">
+                            <label for="login-email">Email</label>
+                        </div>
+                    </div>
+                    <div class="row">
+                        <div class="input-field col s12">
+                            <input id="login-password" type="password" class="validate">
+                            <label for="login-password">Password</label>
+                        </div>
+                    </div>
+                    <a id="submit_button" class="left waves-effect waves-light btn-large btn-flat">Login</a>
+
+                </form>
+
+                <!-- SIGNUP FORM  -->
+                <form class="col s10 push-s1 m6 push-m3" id="tab2">
+                    <!-- <h2>Register</h2> -->
+
+                    <div class="row">
+                        <div class="input-field col s12">
+                            <input id="signup-name" type="text" class="validate">
+                            <label for="signup-name">Name</label>
+                        </div>
+                    </div>
+
+                    <div class="row">
+                        <div class="input-field col s12">
+                            <input id="email" type="email" class="validate">
+                            <label for="email">Email</label>
+                            <span class="helper-text" data-error="Incorrect Email ID" data-success="right"></span>
+                        </div>
+                    </div>
+                    <div class="row">
+                        <div class="input-field col s12">
+                            <input id="mobile" type="number" class="validate">
+                            <label for="mobile">Mobile No.</label>
+                        </div>
+                    </div>
+                    <div class="row">
+                        <div class="input-field col s12">
+                            <input id="password" type="password" class="validate">
+                            <label for="password">Password</label>
+                        </div>
+                    </div>
+                    <a id="submit_button" class="waves-effect waves-light btn-large  btn-flat center">Sign Up</a>
+
+                </form>
+            </div>
+
         </div>
+
     </section>
 
 
