--- a/front-end/index.html
+++ b/front-end/index.html
@@ -14,7 +14,7 @@
 
 
 <body>
-  <div class="navbar-fixed">
+  <div class="">
     <nav class="white z-depth-0" role="navigation">
       <div class="row">
         <div class="col m4 l4 s12 ">
