Product Page Added

--- a/front-end/index.html
+++ b/front-end/index.html
@@ -113,7 +113,8 @@
               <h4 class="dress-card-title">Harpa</h4>
               <p class="dress-card-para"><span class="dress-card-price">Rs.839 &ensp;</span><span
                   class="dress-card-crossed">Rs.2099</span><span class="dress-card-off">&ensp;(60% OFF)</span></p>
-              <a id="product_button" class="waves-effect waves-light btn-small  btn-flat">Add To Cart</a>
+              <a id="product_button" class="waves-effect waves-light btn-small  btn-flat" href="product.html">View
+                More</a>
 
             </div>
 
@@ -130,7 +131,8 @@
               <h4 class="dress-card-title">Harpa</h4>
               <p class="dress-card-para"><span class="dress-card-price">Rs.839 &ensp;</span><span
                   class="dress-card-crossed">Rs.2099</span><span class="dress-card-off">&ensp;(60% OFF)</span></p>
-              <a id="product_button" class="waves-effect waves-light btn-small  btn-flat">Add To Cart</a>
+              <a id="product_button" class="waves-effect waves-light btn-small  btn-flat" href="product.html">View
+                More</a>
 
             </div>
 
@@ -147,10 +149,9 @@
               <h4 class="dress-card-title">Harpa</h4>
               <p class="dress-card-para"><span class="dress-card-price">Rs.839 &ensp;</span><span
                   class="dress-card-crossed">Rs.2099</span><span class="dress-card-off">&ensp;(60% OFF)</span></p>
-              <a id="product_button" class="waves-effect waves-light btn-small  btn-flat">Add To Cart</a>
-
+              <a id="product_button" class="waves-effect waves-light btn-small  btn-flat" href="product.html">View
+                More</a>
             </div>
-
           </div>
         </div>
         <div class="col m4 l3 s6">
@@ -164,7 +165,8 @@
               <h4 class="dress-card-title">Harpa</h4>
               <p class="dress-card-para"><span class="dress-card-price">Rs.839 &ensp;</span><span
                   class="dress-card-crossed">Rs.2099</span><span class="dress-card-off">&ensp;(60% OFF)</span></p>
-              <a id="product_button" class="waves-effect waves-light btn-small  btn-flat">Add To Cart</a>
+              <a id="product_button" class="waves-effect waves-light btn-small  btn-flat" href="product.html">View
+                More</a>
 
             </div>
 
@@ -455,9 +457,7 @@
       <div class="row">
         <div class="col l6 s12">
           <h5>ECOMMERCE</h5>
-          <p class="grey-text text-lighten-4">We are a team of college students working on this project like it's our
-            full time job. Any amount would help support and continue development on this project and is greatly
-            appreciated.</p>
+          <p class="grey-text text-lighten-4">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nullam scelerisque id nunc nec volutpat. Etiam pellentesque tristique arcu, non consequat magna fermentum ac.</p>
 
 
         </div>
