--- a/front-end/product.html
+++ b/front-end/product.html
@@ -76,7 +76,8 @@
                         <h5 class="header col s12">
                             <div class="breadcrumb_wrapper">
                                 <a href="index.html" class="breadcrumb">Home</a>
-                                <a href="login.html" class="breadcrumb">User Login</a>
+                                <a href="categories.html" class="breadcrumb">Category</a>
+                                <a href="login.html" class="breadcrumb">Product</a>
                             </div>
                         </h5>
                     </div>
@@ -84,77 +85,60 @@
             </div>
             <div class="parallax"><img src="media/parallax/2.jpg" alt="Unsplashed background img 2"></div>
         </div>
+    </section>
 
-        <!-- TABS -->
-        <div class="login_wrapper">
-            <div class="row">
-                <div class="col s12 m6 push-m3">
-                    <ul class="tabs">
-                        <li class="tab col s6"><a class="active" href="#tab1">Login</a></li>
-                        <li class="tab col s6"><a href="#tab2">Register</a></li>
-                    </ul>
-                </div>
 
-            </div>
-
-            <div class="row">
-                <!-- LOGIN FORM -->
-                <form class="col s10 push-s1 m6 push-m3" id="tab1">
-                    <!-- <h2>Login</h2> -->
-                    <div class="row">
-                        <div class="input-field col s12">
-                            <input id="login-email" type="email" class="validate">
-                            <label for="login-email">Email</label>
-                        </div>
-                    </div>
-                    <div class="row">
-                        <div class="input-field col s12">
-                            <input id="login-password" type="password" class="validate">
-                            <label for="login-password">Password</label>
-                        </div>
-                    </div>
-                    <a id="submit_button" class="left waves-effect waves-light btn-large btn-flat">Login</a>
-
-                </form>
-
-                <!-- SIGNUP FORM  -->
-                <form class="col s10 push-s1 m6 push-m3" id="tab2">
-                    <!-- <h2>Register</h2> -->
-
-                    <div class="row">
-                        <div class="input-field col s12">
-                            <input id="signup-name" type="text" class="validate">
-                            <label for="signup-name">Name</label>
-                        </div>
-                    </div>
-
-                    <div class="row">
-                        <div class="input-field col s12">
-                            <input id="email" type="email" class="validate">
-                            <label for="email">Email</label>
-                            <span class="helper-text" data-error="Incorrect Email ID" data-success="right"></span>
-                        </div>
-                    </div>
-                    <div class="row">
-                        <div class="input-field col s12">
-                            <input id="mobile" type="number" class="validate">
-                            <label for="mobile">Mobile No.</label>
-                        </div>
-                    </div>
-                    <div class="row">
-                        <div class="input-field col s12">
-                            <input id="password" type="password" class="validate">
-                            <label for="password">Password</label>
-                        </div>
-                    </div>
-                    <a id="submit_button" class="waves-effect waves-light btn-large  btn-flat center">Sign Up</a>
-
-                </form>
-            </div>
-
+    <!-- PRODUCT -->
+    <div class="row">
+        <div class="col m4 push-m1 l4 push-l1 s12 product_image">
+            <img src="https://assets.myntassets.com/h_1440,q_100,w_1080/v1/assets/images/7578929/2018/10/23/86988cdc-cbe3-4b13-93f9-b37ad571b4761540274855321-Harpa-Women-Dresses-9171540274855158-1.jpg" alt="">
         </div>
 
-    </section>
+
+        <div class="col m6 push-m1 l6 push-l1 s10 push-s1">
+            <div class="product_details">
+                <h2 class="product_title">New Product</h2>
+                <ul class="">
+                    <li class="mrp">Rs. 499</li>
+                    <li class="price">Rs. 299</li>
+                </ul>
+                <p class="">This is a short description about this product.Lorem ipsum dolor sit amet,
+                    consectetur adipiscing elit. Nullam scelerisque id
+                    nunc nec volutpat. Etiam pellentesque tristique arcu, non consequat magna fermentum ac. Cras ut
+                    ultricies
+                    eros. Maecenas eros justo, ullamcorper a sapien id, viverra ultrices eros.</p>
+                <div class="">
+                    <div class="product_availability">
+                        <p><span class="black-text">Availability:</span> In Stock</p>
+                    </div>
+                    <div class="">
+                        <p><span>Quantity:</span>
+                            <select class="browser-default">
+                                <option value="1" selected>1</option>
+                                <option>2</option>
+                                <option>3</option>
+                                <option>4</option>
+                                <option>5</option>
+                                <option>6</option>
+                                <option>7</option>
+                                <option>8</option>
+                                <option>9</option>
+                                <option>10</option>
+                            </select>
+                        </p>
+                    </div>
+                    <div class="product_category">
+                        <span class="black-text">Category:</span> <a href="categories.html"> CAT1</a>
+                    </div>
+
+                    <a id="add_to_cart" class="waves-effect waves-light btn-large btn-flat" href="javascript:void(0)"
+                        onclick="manage_cart('<?php echo $get_product['0']['id'] ?>','add')">Add to cart</a>
+
+                </div>
+            </div>
+        </div>
+    </div>
+    <!-- PRODUCT - END -->
 
 
 
@@ -163,9 +147,12 @@
             <div class="row">
                 <div class="col l6 s12">
                     <h5>ECOMMERCE</h5>
-                    <p class="grey-text text-lighten-4">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nullam
-                        scelerisque id nunc nec volutpat. Etiam pellentesque tristique arcu, non consequat magna
-                        fermentum ac.</p>
+                    <p class="grey-text text-lighten-4">We are a team of college students working on this project like
+                        it's our
+                        full time job. Any amount would help support and continue development on this project and is
+                        greatly
+                        appreciated.</p>
+
 
                 </div>
                 <div class="col l3 s12">
