--- a/front-end/product.html
+++ b/front-end/product.html
@@ -23,9 +23,9 @@
                         <li><a href="index.html">Home</a></li>
                         <li id="dropdown"><a href="#">Categories &#9662;</a>
                             <ul class="dropdown">
-                                <li><a href="#">Kids &#9656;</a></li>
-                                <li><a href="#">Women's &#9656;</a></li>
-                                <li><a href="#">Men's &#9656;</a></li>
+                                <li><a href="categories.html">Kids &#9656;</a></li>
+                                <li><a href="categories.html">Women's &#9656;</a></li>
+                                <li><a href="categories.html">Men's &#9656;</a></li>
                             </ul>
                         </li>
 
@@ -36,7 +36,7 @@
                 </div>
                 <div class="col m4 l4 s12">
                     <ul class="left hide-on-med-and-down nav-ul">
-                        <li><a href="#">Contact</a></li>
+                        <li><a href="contact.html">Contact</a></li>
                         <li><a href="#">Cart</a></li>
                         <li><a href="login.html">Login</a></li>
                     </ul>
@@ -50,15 +50,15 @@
                     </li>
                     <li><a class="subheader">Categories</a></li>
                     <ul>
-                        <li><a href="#">Kids</a></li>
-                        <li><a href="#">Women's</a></li>
-                        <li><a href="#">Men's</a></li>
+                        <li><a href="categories.html">Kids</a></li>
+                        <li><a href="categories.html">Women's</a></li>
+                        <li><a href="categories.html">Men's</a></li>
                     </ul>
                     </li>
                     <li>
                         <div class="divider"></div>
                     </li>
-                    <li><a href="#">Contact</a></li>
+                    <li><a href="contact.html">Contact</a></li>
                     <li><a href="#">Cart</a></li>
                     <li><a href="login.html">Login</a></li>
                 </ul>
@@ -83,7 +83,7 @@
                     </div>
                 </div>
             </div>
-            <div class="parallax"><img src="media/parallax/2.jpg" alt="Unsplashed background img 2"></div>
+            <div class="parallax"><img src="media/parallax/4.jpg" alt="Unsplashed background img 2"></div>
         </div>
     </section>
 
@@ -91,7 +91,8 @@
     <!-- PRODUCT -->
     <div class="row">
         <div class="col m4 push-m1 l4 push-l1 s12 product_image">
-            <img src="https://assets.myntassets.com/h_1440,q_100,w_1080/v1/assets/images/7578929/2018/10/23/86988cdc-cbe3-4b13-93f9-b37ad571b4761540274855321-Harpa-Women-Dresses-9171540274855158-1.jpg" alt="">
+            <img src="https://assets.myntassets.com/h_1440,q_100,w_1080/v1/assets/images/7578929/2018/10/23/86988cdc-cbe3-4b13-93f9-b37ad571b4761540274855321-Harpa-Women-Dresses-9171540274855158-1.jpg"
+                alt="">
         </div>
 
 
@@ -174,13 +175,41 @@
                 Made by <a class="brown-text text-lighten-3" href="https://onebigbit.com/">One Big Bit</a>
             </div>
         </div>
-    </footer>
+        <footer class="page-footer">
+            <div class="container">
+                <div class="row">
+                    <div class="col l6 s12">
+                        <h5>ECOMMERCE</h5>
+                        <p class="grey-text text-lighten-4">Lorem ipsum dolor sit amet, consectetur adipiscing elit.
+                            Nullam
+                            scelerisque id nunc nec volutpat. Etiam pellentesque tristique arcu, non consequat magna
+                            fermentum ac.</p>
+                    </div>
+                    <div class="col l3 s12">
+                    </div>
+                    <div class="col l3 s12">
+                        <h5 class="white-text">Quick Links</h5>
+                        <ul class="quick-links">
+                            <li><a class="white-text" href="index.html">HOME</a></li>
+                            <li><a class="white-text" href="categories.html">CATEGORIES</a></li>
+                            <li><a class="white-text" href="contact.html">CONTACT</a></li>
+                            <li><a class="white-text" href="login.html">LOGIN</a></li>
+                        </ul>
+                    </div>
+                </div>
+            </div>
+            <div class="footer-copyright">
+                <div class="container">
+                    Made by <a class="brown-text text-lighten-3" href="https://onebigbit.com/">One Big Bit</a>
+                </div>
+            </div>
+        </footer>
 
 
-    <!--  Scripts-->
-    <script src="https://code.jquery.com/jquery-2.1.1.min.js"></script>
-    <script src="js/materialize.js"></script>
-    <script src="js/init.js"></script>
+        <!--  Scripts-->
+        <script src="https://code.jquery.com/jquery-2.1.1.min.js"></script>
+        <script src="js/materialize.js"></script>
+        <script src="js/init.js"></script>
 
 </body>
 
