--- a/front-end/login.html
+++ b/front-end/login.html
@@ -23,9 +23,9 @@
                         <li><a href="index.html">Home</a></li>
                         <li id="dropdown"><a href="#">Categories &#9662;</a>
                             <ul class="dropdown">
-                                <li><a href="#">Kids &#9656;</a></li>
-                                <li><a href="#">Women's &#9656;</a></li>
-                                <li><a href="#">Men's &#9656;</a></li>
+                                <li><a href="categories.html">Kids &#9656;</a></li>
+                                <li><a href="categories.html">Women's &#9656;</a></li>
+                                <li><a href="categories.html">Men's &#9656;</a></li>
                             </ul>
                         </li>
 
@@ -36,7 +36,7 @@
                 </div>
                 <div class="col m4 l4 s12">
                     <ul class="left hide-on-med-and-down nav-ul">
-                        <li><a href="#">Contact</a></li>
+                        <li><a href="contact.html">Contact</a></li>
                         <li><a href="#">Cart</a></li>
                         <li><a href="login.html">Login</a></li>
                     </ul>
@@ -50,15 +50,15 @@
                     </li>
                     <li><a class="subheader">Categories</a></li>
                     <ul>
-                        <li><a href="#">Kids</a></li>
-                        <li><a href="#">Women's</a></li>
-                        <li><a href="#">Men's</a></li>
+                        <li><a href="categories.html">Kids</a></li>
+                        <li><a href="categories.html">Women's</a></li>
+                        <li><a href="categories.html">Men's</a></li>
                     </ul>
                     </li>
                     <li>
                         <div class="divider"></div>
                     </li>
-                    <li><a href="#">Contact</a></li>
+                    <li><a href="contact.html">Contact</a></li>
                     <li><a href="#">Cart</a></li>
                     <li><a href="login.html">Login</a></li>
                 </ul>
@@ -166,18 +166,16 @@
                     <p class="grey-text text-lighten-4">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nullam
                         scelerisque id nunc nec volutpat. Etiam pellentesque tristique arcu, non consequat magna
                         fermentum ac.</p>
-
                 </div>
                 <div class="col l3 s12">
-
                 </div>
                 <div class="col l3 s12">
                     <h5 class="white-text">Quick Links</h5>
                     <ul class="quick-links">
-                        <li><a class="white-text" href="#!">HOME</a></li>
-                        <li><a class="white-text" href="#!">CATEGORIES</a></li>
-                        <li><a class="white-text" href="#!">CONTACT</a></li>
-                        <li><a class="white-text" href="#!">LOGIN</a></li>
+                        <li><a class="white-text" href="index.html">HOME</a></li>
+                        <li><a class="white-text" href="categories.html">CATEGORIES</a></li>
+                        <li><a class="white-text" href="contact.html">CONTACT</a></li>
+                        <li><a class="white-text" href="login.html">LOGIN</a></li>
                     </ul>
                 </div>
             </div>
