--- a/front-end/login.html
+++ b/front-end/login.html
@@ -85,79 +85,83 @@
             <div class="parallax"><img src="media/parallax/2.jpg" alt="Unsplashed background img 2"></div>
         </div>
 
-        <!-- TABS -->
-        <div class="login_wrapper">
-            <div class="row">
-                <div class="col s12 m6 push-m3">
-                    <ul class="tabs">
-                        <li class="tab col s6"><a class="active" href="#tab1">Login</a></li>
-                        <li class="tab col s6"><a href="#tab2">Register</a></li>
-                    </ul>
-                </div>
 
-            </div>
 
-            <div class="row">
-                <!-- LOGIN FORM -->
-                <form class="col s10 push-s1 m6 push-m3" id="tab1">
-                    <!-- <h2>Login</h2> -->
-                    <div class="row">
-                        <div class="input-field col s12">
-                            <input id="login-email" type="email" class="validate">
-                            <label for="login-email">Email</label>
-                        </div>
-                    </div>
-                    <div class="row">
-                        <div class="input-field col s12">
-                            <input id="login-password" type="password" class="validate">
-                            <label for="login-password">Password</label>
-                        </div>
-                    </div>
-                    <a id="submit_button" class="left waves-effect waves-light btn-large btn-flat">Login</a>
-
-                </form>
-
-                <!-- SIGNUP FORM  -->
-                <form class="col s10 push-s1 m6 push-m3" id="tab2">
-                    <!-- <h2>Register</h2> -->
-
-                    <div class="row">
-                        <div class="input-field col s12">
-                            <input id="signup-name" type="text" class="validate">
-                            <label for="signup-name">Name</label>
-                        </div>
-                    </div>
-
-                    <div class="row">
-                        <div class="input-field col s12">
-                            <input id="email" type="email" class="validate">
-                            <label for="email">Email</label>
-                            <span class="helper-text" data-error="Incorrect Email ID" data-success="right"></span>
-                        </div>
-                    </div>
-                    <div class="row">
-                        <div class="input-field col s12">
-                            <input id="mobile" type="number" class="validate">
-                            <label for="mobile">Mobile No.</label>
-                        </div>
-                    </div>
-                    <div class="row">
-                        <div class="input-field col s12">
-                            <input id="password" type="password" class="validate">
-                            <label for="password">Password</label>
-                        </div>
-                    </div>
-                    <a id="submit_button" class="waves-effect waves-light btn-large  btn-flat center">Sign Up</a>
-
-                </form>
-            </div>
-
-        </div>
 
     </section>
 
 
+    <div id="login" class="row">
+        <div class="col s12 m4  offset-m2">
+            <div class="card">
+                <div class="card-content white-text">
+                    <!-- LOGIN FORM -->
+                    <span class="card-title">Login</span>
+                    <form>
+                        <div class="row">
+                            <div class="input-field col s12">
+                                <input id="login_email" type="email" class="validate white-text">
+                                <label for="login_email">Email</label>
+                                <span class="helper-text" data-error="Incorrect Email ID" data-success="right"></span>
+                            </div>
+                        </div>
 
+                        <div class="row">
+                            <div class="input-field col s12">
+                                <input id="login_password" type="password" class="validate white-text">
+                                <label for="login_password">Password</label>
+                            </div>
+                        </div>
+                        <a id="submit_button" class="waves-effect waves-light btn-large  btn-flat center">Login</a>
+
+                    </form>
+                </div>
+            </div>
+        </div>
+
+        <div class="col s12 m4 ">
+            <div class="card blue-grey darken-1">
+                <div class="card-content white-text">
+                    <!-- SIGNUP FORM  -->
+                    <span class="card-title">Register</span>
+                    <form>
+                        <!-- <h2>Register</h2> -->
+
+                        <div class="row">
+                            <div class="input-field col s12">
+                                <input id="signup-name" type="text" class="validate white-text">
+                                <label for="signup-name">Name</label>
+                            </div>
+                        </div>
+
+                        <div class="row">
+                            <div class="input-field col s12">
+                                <input id="email" type="email" class="validate white-text">
+                                <label for="email">Email</label>
+                                <span class="helper-text" data-error="Incorrect Email ID" data-success="right"></span>
+                            </div>
+                        </div>
+                        <div class="row">
+                            <div class="input-field col s12">
+                                <input id="mobile" type="number" class="validate white-text">
+                                <label for="mobile">Mobile No.</label>
+                            </div>
+                        </div>
+                        <div class="row">
+                            <div class="input-field col s12">
+                                <input id="password" type="password" class="validate white-text">
+                                <label for="password">Password</label>
+                            </div>
+                        </div>
+                        <a id="submit_button" class="waves-effect waves-light btn-large  btn-flat center">Sign
+                            Up</a>
+
+                    </form>
+                </div>
+
+            </div>
+        </div>
+    </div>
     <footer class="page-footer">
         <div class="container">
             <div class="row">
